--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "start": "concurrently --kill-others \"npm run ng serve\" \"./node_modules/.bin/nodemon -w mocking -e ts,js,json -x npm run mockserver\"",
-    "mockserver": "rm -rf build; ts-node --project mocking/tsconfig.json --files mocking/generator/run-mocking.ts"
+    "mockserver": "rm -rf build; ts-node -r tsconfig-paths/register --project mocking/tsconfig.json --files mocking/generator/run-mocking.ts"
   },
   "private": true,
   "dependencies": {
@@ -32,12 +32,17 @@
     "@angular/compiler-cli": "~10.0.0",
     "@ng-apimock/core": "^2.0.1",
     "@ng-apimock/dev-interface": "^1.0.7",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/fs-extra": "^9.0.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/serve-static": "^1.13.4",
     "codelyzer": "^6.0.0-next.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -47,6 +52,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "nodemon": "^2.0.4",
     "protractor": "~7.0.0",
+    "serve-static": "^1.14.1",
     "ts-node": "~8.3.0",
     "tsconfig-paths": "^3.9.0",
     "tslint": "~6.1.0",
